<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeToRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tracker">

    <TextView
        android:id="@+id/tracker"
        style="@style/headingName"
        android:paddingLeft="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/coronaheading"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/tracker_back"
        android:layout_alignParentTop="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/back"

        />

    <TextView
        android:id="@+id/last_update"
        style="@style/NameStyle"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/lastupdatetime"
        android:textStyle="bold" />
    <LinearLayout
        android:background="@drawable/card"
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tracker"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/Confirmed"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/virus" />

            <TextView
                android:id="@+id/confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textColor="@color/dark_red"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/Active"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/coronavirus"
                />

            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                 />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/Recovered"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/prevention"
                 />

            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textColor="@color/dark_green"
                android:textSize="18sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/Deceased"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/death"
                />

            <TextView
                android:id="@+id/deceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textColor="@color/dark_yellow"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topContainer"
        android:layout_marginBottom="16dp"
        tools:listheader="@layout/header" />

</RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>